Added less than 50 meters bow lights.

--- a/nav_lights_analysis.ipynb
+++ b/nav_lights_analysis.ipynb
@@ -724,6 +724,74 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def bow_lights_lt_50m():\n",
+    "    \"\"\"\n",
+    "    Generate light configuration as if you were looking at a ship's bow.\n",
+    "    \"\"\"\n",
+    "    white = (255, 255, 255)\n",
+    "    black = (0, 0, 0)\n",
+    "    red = (255, 0, 0)\n",
+    "    green = (0, 255, 0)\n",
+    "    total_gens = np.random.randint(500, 701)\n",
+    "    all_bow_images = np.empty([total_gens, 195075], dtype=np.uint8)\n",
+    "    for i in range(total_gens):\n",
+    "        new_array = np.zeros((255, 255, 3))\n",
+    "        light_width = np.random.randint(10, 16)\n",
+    "        center_horiz = np.random.randint(75, 176)\n",
+    "        taller_masthead_light = np.random.randint(25, 86)\n",
+    "        tall_mh_height = taller_masthead_light + light_width\n",
+    "        center_for_runs = light_width // 2\n",
+    "        running_light_dist_horiz = np.random.randint(56)\n",
+    "        running_light_dist_vert = np.random.randint(tall_mh_height, tall_mh_height + 51)\n",
+    "        new_array[taller_masthead_light:tall_mh_height, center_horiz: center_horiz + light_width] = white\n",
+    "        left_running_light = center_horiz + center_for_runs - running_light_dist_horiz - light_width\n",
+    "        new_array[running_light_dist_vert: running_light_dist_vert + light_width, left_running_light: left_running_light + light_width] = green\n",
+    "        right_running_light = center_horiz + center_for_runs + running_light_dist_horiz\n",
+    "        new_array[running_light_dist_vert: running_light_dist_vert + light_width, right_running_light: right_running_light + light_width] = red\n",
+    "        new_array = new_array.flatten()\n",
+    "        all_bow_images[i] = new_array\n",
+    "    \n",
+    "    return all_bow_images"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bow_lights_lt_50 = bow_lights_lt_50m()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAQcAAAD8CAYAAAB6iWHJAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAADl0RVh0U29mdHdhcmUAbWF0cGxvdGxpYiB2ZXJzaW9uIDIuMS4wLCBo\ndHRwOi8vbWF0cGxvdGxpYi5vcmcvpW3flQAADIBJREFUeJzt3UGMXeV5xvH/UxxYECSgBOQat5DI\nlUo2jmVRJKKILpqANyYLKrJorAjJWYCUSOnCSRZh2VZNIqG2SI6CYqoUipQgvEjbUCsS3UCwETE2\nLsFJKExs2Y2oCGqkpMDbxT1Obu13PGPPnLl3yP8nXZ1zv/nOue8cjx6+891zDqkqJOlsvzPrAiTN\nJ8NBUstwkNQyHCS1DAdJLcNBUmu0cEhye5KXkhxPsmesz5E0joxxnUOSS4AfAn8KLADPAp+oqhdX\n/cMkjWKskcPNwPGq+nFV/Qp4FNg50mdJGsGGkfa7CXht6v0C8MeLdU7iZZrS+H5WVe9bbuexwiFN\n2/8LgCS7gd0jfb6kc/3nhXQeKxwWgM1T768HTkx3qKq9wF5w5CDNo7HmHJ4FtiS5McmlwN3A/pE+\nS9IIRhk5VNVbSe4D/hW4BHioqo6O8VmSxjHKV5kXXISnFdJaOFRV25fb2SskJbUMB0ktw0FSy3CQ\n1DIcJLUMB0ktw0FSy3CQ1DIcJLUMB0ktw0FSy3CQ1DIcJLUMB0ktw0FSy3CQ1DIcJLUMB0ktw0FS\ny3CQ1DIcJLUMB0ktw0FSy3CQ1DIcJLUMB0ktw0FSy3CQ1DIcJLUMB0ktw0FSy3CQ1DIcJLUMB0mt\nDSvZOMkrwJvA28BbVbU9ydXAPwE3AK8Af1ZV/72yMiWttdUYOfxJVW2tqu3D+z3AgaraAhwY3kta\nZ8Y4rdgJ7BvW9wF3jvAZkka20nAo4LtJDiXZPbRdV1UnAYbltd2GSXYnOZjk4AprkDSCFc05ALdW\n1Ykk1wJPJvmP5W5YVXuBvQBJaoV1aAaqlv5nS7IGlWgMKxo5VNWJYXkaeBy4GTiVZCPAsDy90iIl\nrb2LDocklye54sw68FHgCLAf2DV02wU8sdIiJa29lZxWXAc8PgwbNwD/WFX/kuRZ4LEk9wCvAnet\nvExJay3LOW8cvQjnHNYl5xzWnUNTlxwsySskJbUMB0ktw0FSa6XXOei3mPMJ726OHCS1DAdJLcNB\nUss5h/VqqUsMfoumAzwU43DkIKllOEhqGQ6SWoaDpJbhIKllOEhqGQ6SWl7nsF755f2veSjG4chB\nUstwkNQyHCS1DAdJLcNBUstwkNQyHCS1DAdJLcNBUstwkNQyHCS1DAdJLcNBUstwkNQyHCS1DAdJ\nLcNBUmvJcEjyUJLTSY5MtV2d5MkkLw/Lq4b2JHkgyfEkh5NsG7N4SeNZzsjhG8DtZ7XtAQ5U1Rbg\nwPAe4A5gy/DaDTy4OmVKWmtLhkNVPQW8flbzTmDfsL4PuHOq/eGaeBq4MsnG1SpW0tq52DmH66rq\nJMCwvHZo3wS8NtVvYWiTtM6s9tOnuwcBt/8T5CS7mZx6SJpDFztyOHXmdGFYnh7aF4DNU/2uB050\nO6iqvVW1vaq2X2QNkkZ0seGwH9g1rO8Cnphq/+TwrcUtwBtnTj8krS9LnlYkeQS4DbgmyQLwJeAv\ngceS3AO8Ctw1dP8OsAM4DvwC+NQINUtaA6lqpwTWtohk9kVI736HLuQ03iskJbUMB0ktw0FSy3CQ\n1DIcJLUMB0ktw0FSy3CQ1DIcJLUMB0ktw0FSy3CQ1DIcJLUMB0ktw0FSy3CQ1DIcJLUMB0ktw0FS\ny3CQ1DIcJLUMB0ktw0FSy3CQ1DIcJLUMB0ktw0FSy3CQ1DIcJLUMB0ktw0FSy3CQ1DIcJLUMB0mt\nJcMhyUNJTic5MtV2f5KfJnl+eO2Y+tnnkxxP8lKSj41VuKRxLWfk8A3g9qb9q1W1dXh9ByDJTcDd\nwAeHbf4+ySWrVayktbNkOFTVU8Dry9zfTuDRqvplVf0EOA7cvIL6JM3ISuYc7ktyeDjtuGpo2wS8\nNtVnYWiTtM5cbDg8CHwA2AqcBL48tKfpW90OkuxOcjDJwYusQdKILiocqupUVb1dVe8AX+M3pw4L\nwOaprtcDJxbZx96q2l5V2y+mBknjuqhwSLJx6u3HgTPfZOwH7k5yWZIbgS3A91dWoqRZ2LBUhySP\nALcB1yRZAL4E3JZkK5NThleATwNU1dEkjwEvAm8B91bV2+OULmlMqWqnBNa2iGT2RUjvfocu5DTe\nKyQltQwHSS3DQVLLcJDUMhwktQwHSS3DQVLLcJDUMhwktQwHSS3DQVLLcJDUMhwktQwHSS3DQVLL\ncJDUMhwktQwHSS3DQVLLcJDUMhwktQwHSS3DQVLLcJDUMhwktQwHSS3DQVLLcJDUMhwktQwHSS3D\nQVLLcJDUMhwktQwHSa0lwyHJ5iTfS3IsydEknxnar07yZJKXh+VVQ3uSPJDkeJLDSbaN/UtIWn3L\nGTm8BXyuqv4IuAW4N8lNwB7gQFVtAQ4M7wHuALYMr93Ag6tetaTRLRkOVXWyqp4b1t8EjgGbgJ3A\nvqHbPuDOYX0n8HBNPA1cmWTjqlcuaVQXNOeQ5AbgQ8AzwHVVdRImAQJcO3TbBLw2tdnC0Hb2vnYn\nOZjk4IWXLWlsG5bbMcl7gW8Bn62qnydZtGvTVuc0VO0F9g77PufnkmZrWSOHJO9hEgzfrKpvD82n\nzpwuDMvTQ/sCsHlq8+uBE6tTrqS1spxvKwJ8HThWVV+Z+tF+YNewvgt4Yqr9k8O3FrcAb5w5/ZC0\nfqTq/CP6JB8G/h14AXhnaP4Ck3mHx4DfB14F7qqq14cw+VvgduAXwKeq6rzzCp5WSGviUFVtX27n\nJcNhLRgO0pq4oHDwCklJLcNBUstwkNQyHCS1DAdJLcNBUstwkNQyHCS1DAdJLcNBUstwkNQyHCS1\nDAdJLcNBUstwkNQyHCS1DAdJLcNBUstwkNQyHCS1DAdJLcNBUstwkNQyHCS1DAdJLcNBUstwkNQy\nHCS1DAdJLcNBUstwkNQyHCS1DAdJrSXDIcnmJN9LcizJ0SSfGdrvT/LTJM8Prx1T23w+yfEkLyX5\n2Ji/gKRxbFhGn7eAz1XVc0muAA4leXL42Ver6m+mOye5Cbgb+CDwe8C/JfnDqnp7NQuXNK4lRw5V\ndbKqnhvW3wSOAZvOs8lO4NGq+mVV/QQ4Dty8GsVKWjsXNOeQ5AbgQ8AzQ9N9SQ4neSjJVUPbJuC1\nqc0WOH+YSJpDyw6HJO8FvgV8tqp+DjwIfADYCpwEvnyma7N5NfvbneRgkoMXXLWk0S0rHJK8h0kw\nfLOqvg1QVaeq6u2qegf4Gr85dVgANk9tfj1w4ux9VtXeqtpeVdtX8gtIGsdyvq0I8HXgWFV9Zap9\n41S3jwNHhvX9wN1JLktyI7AF+P7qlSxpLSzn24pbgT8HXkjy/ND2BeATSbYyOWV4Bfg0QFUdTfIY\n8CKTbzru9ZsKaf1J1TnTAWtfRPJfwP8AP5t1LctwDeujTrDWMayXOuHcWv+gqt633I3nIhwAkhxc\nD/MP66VOsNYxrJc6YeW1evm0pJbhIKk1T+Gwd9YFLNN6qROsdQzrpU5YYa1zM+cgab7M08hB0hyZ\neTgkuX24tft4kj2zrudsSV5J8sJwW/rBoe3qJE8meXlYXrXUfkaq7aEkp5McmWpra8vEA8NxPpxk\n24zrnLtb/s/zeIJ5PKbjP0qhqmb2Ai4BfgS8H7gU+AFw0yxramp8BbjmrLa/BvYM63uAv5pRbR8B\ntgFHlqoN2AH8M5N7X24BnplxnfcDf9H0vWn4O7gMuHH4+7hkjercCGwb1q8AfjjUM4/HdLFaV+24\nznrkcDNwvKp+XFW/Ah5lcsv3vNsJ7BvW9wF3zqKIqnoKeP2s5sVq2wk8XBNPA1eedQn8Wte5mJnd\n8l+LP55gHo/p6I9SmHU4rIfbuwv4bpJDSXYPbddV1UmY/CMB186sunMtVts8Huu5veX/rMcTzPUx\nHetRCrMOh2Xd3j1jt1bVNuAO4N4kH5l1QRdp3o71im75H1PzeIJFuzZts6511Y7rrMNhWbd3z1JV\nnRiWp4HHmQzFTp0ZPg7L07Or8ByL1TZXx7pWeMv/WLrHEzCnx3SMRylMm3U4PAtsSXJjkkuZPHty\n/4xr+rUklw/PzSTJ5cBHmdyavh/YNXTbBTwxmwpbi9W2H/jkMMN+C/DGmaHyLMzjLf+LPZ6AOTym\ni9W6qsd1rWZXzzPruoPJTOuPgC/Oup6zans/kxneHwBHz9QH/C5wAHh5WF49o/oeYTJ0/F8m/2W4\nZ7HamAwr/244zi8A22dc5z8MdRwe/nA3TvX/4lDnS8Ada1jnh5kMtQ8Dzw+vHXN6TBerddWOq1dI\nSmrN+rRC0pwyHCS1DAdJLcNBUstwkNQyHCS1DAdJLcNBUuv/AGMwaFLJbaJbAAAAAElFTkSuQmCC\n",
+      "text/plain": [
+       "<matplotlib.figure.Figure at 0x2a2ecb977f0>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "plt.imshow(bow_lights_lt_50[400].reshape(255, 255, 3))\n",
+    "plt.show();"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
