Going to stratify and randomize the data and targets.

--- a/nav_lights_analysis.ipynb
+++ b/nav_lights_analysis.ipynb
@@ -928,6 +928,17 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 103,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "from sklearn.model_selection import StratifiedShuffleSplit"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
